# nbody-simulation

./: Cargo.toml
src/: main.rs
src/body/: mod.rs
src/util/: mod.rs
