[package]
name = "nbody_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
physical_constants = "0.5.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["gfx", "ttf"]